<resources>
    <string name="app_name">Expired!</string>
    <string name="title">Expired!</string>
    <string name="button_add">Add</string>
    <string name="action_search">Search...</string>
    <string name="hint_name">Name</string>
    <string name="hint_expdate">Expiration Date</string>
    <string name="hint_storagetype">Storage Type</string>
    <string name="item_name">Item Name</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="storage_type">Storage Type</string>
    <string name="purchase_date">Purchase Date</string>
    <string-array name="storage_types">
        <item>Fridge</item>
        <item>Freezer</item>
        <item>Misc.</item>
    </string-array>
    // used for to fix errors
    <item name="visible" type="id"/>
    <item name="masked" type="id"/>
</resources>
