<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thele.expired.AddActivity"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text|textAutoComplete" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/expDateField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_expdate"
            android:inputType="text|textAutoComplete" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/storageTypeField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_storagetype"
            android:inputType="text|textAutoComplete" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="buttonClick"
        android:text="Add"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

</LinearLayout>
